# yevvle

./: .gitignore  .gitmodules  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
components/GfxLibrary/: CMakeLists.txt
components/NTPClient/: CMakeLists.txt
components/WiFiManager/: CMakeLists.txt
components/radioLib/: CMakeLists.txt
firmware/: .gitignore  CMakeLists.txt  pytest.py  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  setup.sh
firmware/components/ArduinoNvs/: CMakeLists.txt
firmware/components/Time/: CMakeLists.txt
firmware/components/magic_enum/: CMakeLists.txt
firmware/components/radioLib/: CMakeLists.txt
firmware/components/sunset/: CMakeLists.txt
firmware/main/: CMakeLists.txt  ble.cpp  config.h  core.cpp  core.h  deep_sleep.cpp  display.h  gps.h  light.cpp  light.h  main.cpp  menus.cpp  peripherals.cpp  power.cpp  power.h  radio.h  secrets.h  spi.h  touch.cpp  ui.cpp  ui.h  uspi.h
firmware/main/fonts/: DSEG7_Classic_Bold_25.h  DSEG7_Classic_Bold_53.h  DSEG7_Classic_Regular_15.h  DSEG7_Classic_Regular_39.h  Seven_Segment10pt7b.h  fontdedup.py  fontverify.py
hardware/case/v13/: Front Case.stl  Rear Case.stl
hardware/case/v14/: Front Case.stl  Rear Case.stl
hardware/case/v8/: Front Case.stl  Rear Case.stl
hardware/pcb/v4/: bom.csv  pcb_easyeda.json
main/: CMakeLists.txt  battery.cpp  battery.h  ble.cpp  core.cpp  core.h  deep_sleep.cpp  deep_sleep.h  deep_sleep_utils.cpp  deep_sleep_utils.h  display.cpp  display.h  display_draw.cpp  gps.cpp  gps.h  hardware.h  idf_component.yml  light.cpp  lora.cpp  lora.h  lut.h  menus.cpp  peripherals.cpp  peripherals.h  power.cpp  power.h  radio.cpp  radio.h  secrets.cpp  settings.h  time.cpp  time.h  touch.cpp  touch.h  ui.cpp  ui.h  uspi.h  watchface.cpp  watchface.h  watchface_default.cpp  (+1 more)
